# eval

./: .gitignore  CMakeLists.txt  TODO.txt  eval.cpp  evaluable.cpp  evaluable.h  evaluator-default_library.h  evaluator.cpp  evaluator.h  main.cpp  tokens.cpp  tokens.h  variable.cpp  variable.h
